[tool.poetry]
name = "nb-XiaoLinNian"
version = "0.1.0"
description = "nb-XiaoLinNian"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0.a1"
nb-cli = "^0.1.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"

[nonebot.plugins]
plugins = ["nonebot_plugin_picsearcher", "nonebot_plugin_arcaea", "nonebot_hk_reporter"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
